fixed mobile version of the section mobile

--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@ h5{
     position: absolute;
     right: 0;
     top: 0;
-    z-index: 5;
+    z-index: 4;
 }
 #hren{
     width: 184px;
@@ -916,20 +916,38 @@ h5{
     #laptop{
         position: relative;
         text-align: center;
+        padding: 150px 0 150px;
     }
     .laptop_description{
         position: absolute;
-        top: 150px;
+        top: 40px;
+    }
+    .laptop_description p{
+        margin: 20px;
     }
 
 
-
+    .blocks_text{
+        text-align: center;
+    }
     .blocks_description{
         flex-direction: column;
         text-align: center;
     }
     .blocks_description h2{
         margin-bottom: 30px;
+    }
+    #frame{
+        width: 275px;
+        position: absolute;
+        top: 0;
+        left:0px
+    }
+    #icecream{
+        width: 275px;
+        position: absolute;
+        bottom: 0;
+        left:0px
     }
 
 
@@ -962,12 +980,27 @@ h5{
     }
 
 
-    .mobile_phone img{
-        opacity: 70%;
-    }
+    
     .mobile_block div:first-of-type {
         text-align: center;
         margin: 0;
+    }
+    .mobile_block>div:first-of-type h2{
+        max-width: none;
+    }
+    .mobile_block>div:first-of-type p{
+        max-width: none;
+    }
+    .mobile_block>div:first-of-type ul{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 50px;
+    }
+    .mobile_block>div:first-of-type ul>li{
+        margin-bottom: 40px;
+    }
+    .mobile_phone{
+        display: none;
     }
 
 
